[tool.poetry]
name = "ynab-bog-statement"
version = "0.1.0"
description = ""
authors = ["Alex Zemlyakov <alex@ndr.su>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
pandas = "^2.2.0"
xlrd = "^2.0.1"
pyarrow = "^14.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
